--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -10,19 +10,21 @@
 </head>
 <body>
     <div data-role="page" id="showProductPage">
-        <div data-role="header" data-theme="b">
-            <h1>
-            </h1>
+        <div data-role="header" id="header">
+            <p id="orgName">
+            </p>
         </div>
-        <div data-role="content" data-theme="c"  id="showproductBody">
+        <div data-role="content" data-theme="c" id="showproductBody">
             <h1 id="productName">
                 סכין מטבח</h1>
             <img alt="productImage" id="productImage" />
             <h3 id="productDescription">
             </h3>
-            <div class="ui-grid-b" id="basicInfo"></div>
-            <div data-role="collapsible-set" id="propertiesAccordion" >
+            <div data-role="collapsible-set" data-content-theme="a" id="propertiesAccordion">
             </div>
+        </div>
+        <div data-role="footer" data-theme="a">
+        
         </div>
     </div>
 </body>
