--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -2,15 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
     <link href="css/ShowProduct.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
     <script src="js/ShowProduct.js" type="text/javascript"></script>
 </head>
 <body>
     <div data-role="page" id="showProductPage">
-        <div data-role="header" id="header">
+        <div data-role="header" data-theme="c" data-position="fixed">
             <p id="orgName">
             </p>
         </div>
@@ -20,11 +20,12 @@
             <img alt="productImage" id="productImage" />
             <h3 id="productDescription">
             </h3>
-            <div data-role="collapsible-set" data-content-theme="a" id="propertiesAccordion">
+            <!-- /grid-a -->
+            <div data-role="collapsible-set" data-content-theme="c" id="propertiesAccordion">
             </div>
+            <h1 id="price"></h1>
         </div>
-        <div data-role="footer" data-theme="a">
-        
+        <div data-role="footer" data-theme="a" data-position="fixed">
         </div>
     </div>
 </body>
