--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
+    <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes"/>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
     <link href="css/ShowProduct.css" rel="stylesheet" type="text/css" />
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
@@ -21,7 +22,7 @@
             <h3 id="productDescription">
             </h3>
             <!-- /grid-a -->
-            <div data-role="collapsible-set" data-content-theme="c" id="propertiesAccordion">
+            <div data-role="collapsible-set" data-theme="a" data-content-theme="a" id="propertiesAccordion">
             </div>
             <h1 id="price"></h1>
         </div>
