--- a/FbLogin.htm
+++ b/FbLogin.htm
@@ -17,7 +17,7 @@
         <div id="fb-root">
             </div>
             <div id="center-button" class="fb-login-button" data-max-rows="1" data-size="large"
-                data-show-faces="true" data-auto-logout-link="true">
+                data-show-faces="true" data-auto-logout-link="true" data-scope="publish_actions">
                 Login with Facebook
             </div>
             <div data-role="footer" data-theme="c" data-position="fixed">footer</div>
