--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -59,15 +59,36 @@
             </p>
             <p id="orgDescription">
             </p>
-            <table>
-                <tr>
-                    <th>
-                        טלפון:
-                    </th>
-                    <td id="orgPhone">
-                    </td>
-                </tr>
-            </table>
+            <div>
+                <table id="orgProfileTB">
+                    <tr>
+                        <th>
+                            טלפון:
+                        </th>
+                        <td id="orgPhone">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="webSiteUrl">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            אתר החברה:
+                        </th>
+                        <td id="orgWebsite">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            פייסבוק:
+                        </th>
+                        <td>
+                            <a id="orgFB"></a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div data-role="footer" data-theme="c" data-position="fixed">
             <div data-role="navbar">
