--- a/FbLogin.htm
+++ b/FbLogin.htm
@@ -11,16 +11,13 @@
 </head>
 <body>
     <div data-role="page">
-        <div data-role="header" data-theme="c" data-position="fixed">
-            Business Reality</div>
         <div data-role="content">
         <div id="fb-root">
             </div>
-            <div id="center-button" class="fb-login-button" data-max-rows="1" data-size="large"
-                data-show-faces="true" data-auto-logout-link="true" data-scope="publish_actions">
+            <div id="center-button" class="fb-login-button" data-max-rows="1" data-size="xlarge"
+                data-show-faces="false" data-auto-logout-link="true" data-scope="publish_actions">
                 Login with Facebook
             </div>
-            <div data-role="footer" data-theme="c" data-position="fixed">footer</div>
         </div>
     </div>
 </body>
