--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -3,15 +3,21 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes" />
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.css" />
     <link href="css/ShowProduct.css" rel="stylesheet" type="text/css" />
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
     <script src="js/ShowProduct.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.js"></script>
 </head>
 <body>
     <div data-role="page" id="showProductPage">
+        <div data-role="panel" id="sales" data-position="right" data-display="push">
+            <p>
+                assa
+            </p>
+        </div>
         <div data-role="header" data-theme="c" data-position="fixed">
+            <a href="#sales" data-icon="star" class="ui-btn-right">מבצעים</a>
             <p id="orgName">
             </p>
         </div>
@@ -28,6 +34,8 @@
             </h1>
             <div data-role="popup" data-position-to="window" data-theme="c" data-transition="pop"
                 id="myPopup" data-history="false">
+                <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete"
+                    data-iconpos="notext" class="ui-btn-right">Close</a>
                 <div data-role="header" data-theme="a">
                     <p>
                         מוצר במבצע</p>
@@ -42,7 +50,6 @@
                 <ul>
                     <li><a href="">קבל הטבה</a></li>
                     <li><a href="#comapnyProfile" data-transition="flip">אודות החברה</a></li>
-                    <li><a href="">מבצעים</a></li>
                 </ul>
             </div>
         </div>
