--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -3,21 +3,20 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes" />
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
     <link href="css/ShowProduct.css" rel="stylesheet" type="text/css" />
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
     <script src="js/ShowProduct.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 </head>
 <body>
     <div data-role="page" id="showProductPage">
         <div data-role="panel" id="sales" data-position="right" data-display="push">
-            <p>
-                assa
-            </p>
+            <ul id="productsOnSale" data-role="listview" data-split-icon="arrow-l" data-split-theme="d">
+            </ul>
         </div>
         <div data-role="header" data-theme="c" data-position="fixed">
-            <a href="#sales" data-icon="star" class="ui-btn-right">מבצעים</a>
+            <a href="#sales" data-iconpos="right" data-icon="star" class="ui-btn-right">מבצעים</a>
             <p id="orgName">
             </p>
         </div>
