--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div data-role="page" id="showProductPage">
-        <div data-role="panel" id="sales" data-position="right" data-display="push">
+        <div data-role="panel"  data-position-fixed="true" id="sales" data-position="right" data-display="push">
             <ul id="productsOnSale" data-role="listview" data-split-icon="arrow-l" data-split-theme="d">
             </ul>
         </div>
@@ -34,7 +34,7 @@
             <div data-role="popup" data-position-to="window" data-theme="c" data-transition="pop"
                 id="myPopup" data-history="false">
                 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete"
-                    data-iconpos="notext" class="ui-btn-right">Close</a>
+                    data-iconpos="notext" class="ui-btn-right"></a>
                 <div data-role="header" data-theme="a">
                     <p>
                         מוצר במבצע</p>
