--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -3,9 +3,9 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes" />
-    <link href="css/rtl.jquery.mobile-1.3.0.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
     <link href="css/ShowProduct.css" rel="stylesheet" type="text/css" />
-    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/ShowProduct.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 </head>
@@ -13,7 +13,8 @@
     <div data-role="page" id="showProductPage">
         <div data-role="panel" data-position-fixed="true" id="sales" data-position="right"
             data-display="push">
-            <ul id="productsOnSale" data-role="listview" data-split-icon="arrow-l" data-split-theme="d">
+            <ul id="productsOnSale" data-role="listview" data-iconpos="left" data-split-icon="arrow-l"
+                data-split-theme="d">
             </ul>
         </div>
         <div data-role="header" data-theme="c" data-position="fixed">
@@ -25,8 +26,10 @@
             <h1 id="productName">
             </h1>
             <img alt="productImage" id="productImage" />
-            <h3 id="productDescription">
-            </h3>
+            <b>
+                <p id="productDescription">
+                </p>
+            </b>
             <!-- /grid-a -->
             <div data-role="collapsible-set" data-theme="a" data-content-theme="a" id="propertiesAccordion">
             </div>
@@ -75,7 +78,6 @@
                         <td id="orgPhone">
                         </td>
                     </tr>
-
                     <tr>
                         <th>
                             אתר החברה:
