--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -109,6 +109,7 @@
     </div>
     <div data-role="page" id="shareCampaign">
         <div data-role="header" data-theme="c" data-position="fixed">
+        <a href="" data-iconpos="right" data-icon="forward" class="ui-btn-right" data-rel="back">מבצעים</a>
             <p id="orgName2">
             </p>
         </div>
