--- a/FbLogin.htm
+++ b/FbLogin.htm
@@ -15,7 +15,7 @@
         <div id="fb-root">
             </div>
             <div id="center-button" class="fb-login-button" data-max-rows="1" data-size="xlarge"
-                data-show-faces="false" data-auto-logout-link="true" data-scope="publish_actions">
+                data-show-faces="false" data-auto-logout-link="true" data-scope="publish_actions,user_birthday">
                 Login with Facebook
             </div>
         </div>
