--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -23,6 +23,8 @@
             </p>
         </div>
         <div data-role="content" data-theme="c" id="showproductBody">
+        <div id="fb-root">
+            </div>
             <h1 id="productName">
             </h1>
             <img alt="productImage" id="productImage" />
