--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -128,7 +128,7 @@
             <p id="CampDescription">
             </p>
             <div>
-            <input id="btnShareCampaign" type="button" value="שתף לקבלת ההטבה" onclick="ShareCampaign()" />
+            <a data-role="button" id="btnShareCampaign" onclick="ShareCampaign()">שתף לקבלת ההטבה</a>
             </div>
             <div data-role="popup" data-position-to="window" data-theme="c" data-transition="pop"
                 id="popupCampaign" data-history="false">
