--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -127,8 +127,9 @@
             <p id="CampDescription">
             </p>
             <div>
-                <a data-role="button" id="btnShareCampaign" onclick="ShareCampaign()" data-theme="b">שתף לקבלת ההטבה</a>
-                <a data-role="button" id="btnCheckIfValid" onclick="CheckIfValid(1)">לבדיקת זכאות ההטבה</a>
+                <a data-role="button" id="btnShareCampaign" onclick="ShareCampaign()" data-theme="b">
+                    שתף לקבלת ההטבה</a> <a data-role="button" id="btnCheckIfValid" onclick="CheckIfValid(1)">
+                        לבדיקת זכאות ההטבה</a>
             </div>
             <div data-role="popup" data-position-to="window" data-theme="c" data-transition="pop"
                 id="popupCampaign" data-history="false">
@@ -157,7 +158,7 @@
             <div data-role="popup" id="validPopUp" data-position-to="window" data-theme="a" class="ui-corner-all">
                 <div data-role="header" data-theme="a">
                     <p>
-                        נא הכנס סיסמה</p>
+                        נא הזן סיסמא למימוש ההטבה</p>
                 </div>
                 <form action="">
                 <div style="padding: 10px 20px;">
@@ -167,7 +168,6 @@
                     <input type="button" id="deactivateBtn" value="אישור" onclick="deactivate()" />
                 </div>
                 </form>
-            </div>
             </div>
         </div>
         <div data-role="footer" data-theme="c" data-position="fixed">
