--- a/FbLogin.htm
+++ b/FbLogin.htm
@@ -3,22 +3,19 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes" />
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
     <script src="js/FbLogin.js" type="text/javascript"></script>
     <link href="css/FbLogin.css" rel="stylesheet" type="text/css" />
+    <link href="css/normalize.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div data-role="page">
-        <div data-role="content">
+    <div id="content">
         <div id="fb-root">
             </div>
             <div id="center-button" class="fb-login-button" data-max-rows="1" data-size="xlarge"
                 data-show-faces="false" data-auto-logout-link="true" data-scope="publish_actions,user_birthday">
                 Login with Facebook
             </div>
-        </div>
     </div>
 </body>
 </html>
