עוד קצת עיצובים

--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -18,7 +18,7 @@
             </ul>
         </div>
         <div data-role="header" data-theme="b" data-position="fixed">
-            <a href="#sales" data-iconpos="right" data-icon="star" class="ui-btn-right">מבצעים</a>
+            <a href="#sales" data-iconpos="right" data-icon="star" class="ui-btn-right" data-mini="false" data-inline="true">מבצעים</a>
             <p id="orgName">
             </p>
         </div>
@@ -63,9 +63,9 @@
     </div>
     <div data-role="page" id="comapnyProfile">
         <div data-role="header" data-theme="b" data-position="fixed">
-        <a data-iconpos="right" data-icon="forward" class="ui-btn-right" data-rel="back">חזרה</a>
+        <a data-iconpos="right" data-icon="forward" class="ui-btn-right" data-rel="back" data-mini="false" data-inline="true">חזרה</a>
             <p id="P1">
-                פרופיל החברה
+               אודות העסק
             </p>
         </div>
         <div data-role="content" data-theme="c" id="Div2">
@@ -92,11 +92,12 @@
                     </tr>
                     <tr>
                         <th>
-                            פייסבוק:
+                            עמוד הפייסבוק:
                         </th>
                         <td>
                             <a id="fbLogo" target="_blank">
-                                <img src="BackOffice/img/fbLogo.jpg" /></a>
+                                <img src="images/f.png" />
+                                </a>
                         </td>
                     </tr>
                 </table>
@@ -113,7 +114,7 @@
     </div>
     <div data-role="page" id="shareCampaign">
         <div data-role="header" data-position="fixed" data-theme="b">
-            <a data-iconpos="right" data-icon="forward" class="ui-btn-right" data-rel="back">חזרה</a>
+            <a data-iconpos="right" data-icon="forward" class="ui-btn-right" data-rel="back" data-mini="false" data-inline="true">חזרה</a>
             <p id="orgName2">
             </p>
         </div>
@@ -184,13 +185,13 @@
     </div>
     <div data-role="page" id="scanHistory">
             <div data-role="header" data-theme="b" data-position="fixed">
-            <a data-iconpos="right" data-icon="forward" class="ui-btn-right" data-rel="back">חזרה</a>
+            <a data-iconpos="right" data-icon="forward" class="ui-btn-right" data-rel="back" data-mini="false" data-inline="true">חזרה</a>
             <p>
             היסטוריית מוצרים
             </p>
             	<div data-role="content">
 		<div class="content-primary">	
-			<ul data-role="listview" id="scanHistoryList" data-filter="true" data-filter-placeholder="חפש מוצרים.." data-filter-theme="d" data-theme="d" data-divider-theme="d">
+			<ul data-role="listview" id="scanHistoryList" data-filter="true" data-filter-placeholder="חפש מוצרים בהם התעניינת בעבר.." data-filter-theme="d" data-theme="d" data-divider-theme="d">
 			</ul>
 			</div>
         </div>
