--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -2,12 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
     <link href="css/ShowProduct.css" rel="stylesheet" type="text/css" />
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/ShowProduct.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 </head>
 <body>
     <div data-role="page" id="showProductPage">
@@ -61,6 +62,7 @@
     </div>
     <div data-role="page" id="comapnyProfile">
         <div data-role="header" data-theme="b" data-position="fixed">
+            <a data-iconpos="right" data-icon="forward" class="ui-btn-right" data-rel="back">חזרה</a>
             <p id="P1">
                 פרופיל החברה
             </p>
@@ -72,7 +74,7 @@
             <p id="orgDescription">
             </p>
             <div>
-                <table id="orgProfileTB">
+                <table id="orgProfileTB" class="table table-hover">
                     <tr>
                         <th>
                             טלפון:
