סידור קמפיין והיסטוריית סריקות

--- a/ShowProduct.htm
+++ b/ShowProduct.htm
@@ -75,6 +75,8 @@
             </p>
             <p id="orgDescription">
             </p>
+            <!--<img id="companyLogo"/>-->
+            <p>צור קשר</p>
             <div>
                 <table id="orgProfileTB" class="table table-hover">
                     <tr>
@@ -93,9 +95,10 @@
                     </tr>
                     <tr>
                         <th>
-                            עמוד הפייסבוק:
+                            
                         </th>
                         <td>
+                        <br />
                             <a id="fbLogo" target="_blank">
                                 <img src="images/f.png" />
                                 </a>
