--- a/FbLogin.htm
+++ b/FbLogin.htm
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
-   <!-- <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes" />-->
+    <title>Business Reality Login</title>
+   <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.5; initial-scale=1.0; user-scalable=yes" />
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
     <script src="js/FbLogin.js" type="text/javascript"></script>
@@ -11,16 +11,23 @@
     <link href="css/normalize.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div id="fb-root">
-        </div>
+   
     <div data-role="page"> 
-    <div id="space">
-    </div>      
+   <div data-role="header">
+
+   </div>
+   <div data-role="content">
+ 
+   <div id="fb-root">
+        </div>
+   </div>
+    <div data-role="footer" data-position="fixed">
         <div id="center-button" class="fb-login-button" data-max-rows="1" data-size="xlarge"
             data-show-faces="false" data-auto-logout-link="true" data-scope="publish_actions,user_birthday">
             Login with Facebook
      
-        </div>
+        </div> 
+       </div>
     </div>
 </body>
 </html>
